# bazel_playground

./: .bazelrc  .gitignore  README.md  WORKSPACE
rust/: Cargo.toml
rust/dummy/: Cargo.toml
rust/gui/: BUILD.bazel  Cargo.toml
rust/gui/src/: lib.rs
