[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sdl2 = ["dep:astc-decode"]

[dependencies]
astc-decode = { version = "0.3.1", optional = true }
sdl2 = { version = "0.35.2", features = ["use-pkgconfig", "ttf"] }
